Project list style

--- a/src/Tippy/Pages/NodeLog/Index.cshtml
+++ b/src/Tippy/Pages/NodeLog/Index.cshtml
@@ -13,7 +13,7 @@
         </div>
         <div class="level-right">
             <form method="post">
-                <button asp-page="./OpenFolder" class="button is-success">
+                <button asp-page="./OpenFolder" class="button is-primary is-primary-button">
                     <span class="icon">
                         <i class="far fa-folder-open"></i>
                     </span>
