Use nervos logo

--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -196,10 +196,10 @@
                 </nav>
 
                 <div class="sidebar-toggler-container p-4">
-                    <div class="level">
+                    <div class="level px-2">
                         <div class="level-left">
                             <span class="">
-                                <i class="fab fa-connectdevelop has-text-success"></i>
+                                <img src="~/img/logo.png" width="40" />
                                 <strong>Tippy</strong>
                             </span>
                         </div>
