--- a/src/Tippy/Pages/Home/Index.cshtml
+++ b/src/Tippy/Pages/Home/Index.cshtml
@@ -27,7 +27,7 @@
     <p class="mt-4 mb-6">You don’t have any chain/project. To get started, you can...</p>
 
     <form class="my-4" asp-page="./QuickStart" method="post">
-        <button class="button is-primary">
+        <button class="button is-primary is-primary-button">
             <span class="icon">
                 <i class="fas fa-bolt"></i>
             </span>
@@ -38,7 +38,7 @@
     <p>or</p>
 
     <div class="my-4">
-        <a class="button is-primary" asp-page="/Projects/Create">
+        <a class="button is-primary is-primary-button" asp-page="/Projects/Create">
             <span class="icon">
                 <i class="fas fa-plus"></i>
             </span>
