--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"] - Tippy</title>
-    <link rel="stylesheet" href="~/lib/mazipan/mazipan.css" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
+    <link rel="stylesheet" href="~/css/theme.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <style>
     </style>
@@ -141,7 +141,7 @@
 
     <div class="wrapper">
         <div class="columns">
-            <aside id="main-sidebar" class="column is-2 aside">
+            <aside id="main-sidebar" class="column aside">
                 <nav class="menu active-menu--<%= activeMenu %>">
                     <ul class="menu-list">
                         <li>
