--- a/src/Tippy/wwwroot/css/site.css
+++ b/src/Tippy/wwwroot/css/site.css
@@ -100,6 +100,10 @@ body {
     width: 180px;
 }
 
+.main {
+    margin-left: 180px;
+}
+
 .sidebar-toggler-container {
     position: absolute;
     bottom: 0;
