--- a/src/Tippy/wwwroot/sass/bulma/sass/components/navbar.sass
+++ b/src/Tippy/wwwroot/sass/bulma/sass/components/navbar.sass
@@ -44,7 +44,8 @@ $navbar-divider-height: 2px !default
 
 $navbar-bottom-box-shadow-size: 0 -2px 0 0 !default
 
-$navbar-breakpoint: $desktop !default
+$navbar-breakpoint: 10px !default
+// $navbar-breakpoint: $desktop !default
 
 $navbar-colors: $colors !default
 
